# xerox-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  copier.yaml  pyproject.toml
template/{{project_name}}/: .python-version.jinja  CHANGELOG.md.jinja  CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Dockerfile.dev  Dockerfile.jinja  LICENSE.md.jinja  Makefile.jinja  README.md.jinja  docker-compose.yaml  pyproject.toml.jinja
template/{{project_name}}/.github/workflows/: deploy.yml.jinja  docs.yml.jinja  main.yml.jinja
template/{{project_name}}/docs/: mkdocs.yaml.jinja
template/{{project_name}}/docs/source/: index.md.jinja  quickstart.md.jinja  reference.md.jinja
template/{{project_name}}/src/{{module_name}}/: __init__.py  config.py.jinja  constants.py  exceptions.py.jinja  logging.py.jinja  main.py  main.py.jinja  pydantix.py  version.py
template/{{project_name}}/src/{{module_name}}/middleware/: track_requests.py.jinja
template/{{project_name}}/src/{{module_name}}/routers/: __init__.py.jinja  health.py  info.py.jinja
template/{{project_name}}/src/{{module_name}}/routes/: __init__.py.jinja  health.py  info.py.jinja
template/{{project_name}}/tests/: conftest.py.jinja  test_exceptions.py.jinja  test_logging.py.jinja  test_main.py.jinja  test_pydantix.py.jinja  test_version.py.jinja
template/{{project_name}}/tests/routers/: test_health.py  test_info.py.jinja
template/{{project_name}}/tests/routes/: test_health.py  test_info.py.jinja
template/{{project_name}}/tests/schemas/: test_info.py.jinja
(+1 files in other folders)
