[project]
name = "xerox-python"
version = "0.2.0"
description = "Python project template for dusktreader@github"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "copier>=9.6.0",
]

[project.urls]
homepage = "https://github.com/dusktreader/xerox-python"
source = "https://github.com/dusktreader/xerox-python"
changelog = "https://github.com/dusktreader/xerox-python/blob/main/CHANGELOG.md"
